<package format="3">
    <name>marine_radar_control_msgs</name>
    <version>0.0.1</version>
    <description>
    This package defines message types used to control marine radars.
    </description>
    <maintainer email="roland@ccom.unh.edu">Roland Arsenault</maintainer>
    <license>BSD</license>
    
    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>rosidl_default_generators</buildtool_depend>
    
    <depend>std_msgs</depend>

    <exec_depend>rosidl_default_runtime</exec_depend>
    <member_of_group>rosidl_interface_packages</member_of_group>
    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>
